javaDSL/src/test/resources/typeSystemTestModels/valid/expressions/PrimaryAccess.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.expressions;

public class PrimaryAccess {
  int a = 0;
  int b = a;
}
