javaDSL/src/test/resources/typeSystemTestModels/invalid/statements/ForConditionHasBooleanType.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.statements;

public class ForConditionHasBooleanType {
  public void testFor(){
    for(int i = 0 ; i << 10 ; i++){

    }
  }
}
